--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 This is the Admin creating an index.html file for Tom and Jerry.
 This is Tom adding Navigation to the AI-website
+This is Jerry adding Contact Information to the AI-website
